src/main/java/com/example/zadanie_github/error/UserNotFoundException.java
package com.example.zadanie_github.error;


public class UserNotFoundException extends Exception {

   public UserNotFoundException() {
   }
}
